--- a/airport-transfer.html
+++ b/airport-transfer.html
@@ -4,7 +4,7 @@
 <head>
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <title>Airport Transfer | Best Airport Transfer Service in Dubai</title>
+     <title>Airport Transfer | Best Airport Transfer Service in UK</title>
      <meta name="description" content="Prime bus AE" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
@@ -171,7 +171,7 @@
                                         </h2>
                                         <div class="service-details__need-help-contact">
                                              <p>Mail Anytime</p>
-                                             <a href="mailto:info@primebus.ae"> info@primebus.ae</a>
+                                             <a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
                                         </div>
                                    </div>
                                    <div class="service-details__download">
@@ -190,19 +190,18 @@
                                    </div>
                                    <div class="service-details__content">
                                         <h3 class="service-details__content-title">Airport Transfer</h3>
-                                        <p class="service-details__text-2">Dubai-Based “Prime Bus” – Executive Airport
+                                        <p class="service-details__text-2">UK-Based “Prime Bus” – Executive Airport
                                              Transfers & Coach Hire</p>
                                         <p class="service-details__text-1 text-just" style="margin-bottom: 20px;">
                                              <b>Prime Bus</b>
-                                             is a leading transport service provider <b>based in Dubai</b>, with a
+                                             is a leading transport service provider <b>based in UK</b>, with a
                                              strong focus on delivering <b>premium airport transfer and coach hire
-                                                  solutions</b>. Our strategic location allows us to serve Dubai’s major
+                                                  solutions</b>. Our strategic location allows us to serve UK's major
                                              airports and surrounding areas efficiently, <b>24 hours a day, 7 days a
                                                   week.</b>
                                         </p>
                                         <p class="service-details__text-3 text-just">Whether you’re arriving at or
-                                             departing from
-                                             Dubai International Airport or any other airport in the region, Prime Bus
+                                             departing from UK International Airport or any other airport in the region, Prime Bus
                                              offers reliable, comfortable, and professional chauffeur-driven transfers.
                                              We also provide executive coaches ideal for group travel, corporate events,
                                              hotel transfers, and tourism services. All bookings are simple and
@@ -253,7 +252,7 @@
                                                                  ensuring on-time pickups. Enjoy professional
                                                                  chauffeurs, easy booking, instant confirmation, and
                                                                  comfortable vehicles—perfect for individuals and group
-                                                                 travel across Dubai.</p>
+                                                                 travel across UK.</p>
                                                        </div>
                                                   </div>
                                              </div>
@@ -272,7 +271,7 @@
                                                                            <i class="fa fa-arrow-right"></i>
                                                                       </div>
                                                                       <div class="text">
-                                                                           <p>Dubai International Airport</p>
+                                                                           <p>Heathrow Airport Transfers</p>
                                                                       </div>
                                                                  </li>
                                                                  <li>
@@ -280,7 +279,7 @@
                                                                            <i class="fa fa-arrow-right"></i>
                                                                       </div>
                                                                       <div class="text">
-                                                                           <p>Al Maktoum International Airport</p>
+                                                                           <p>Gatwick Airport Transfers</p>
                                                                       </div>
                                                                  </li>
                                                                  <li>
@@ -288,7 +287,7 @@
                                                                            <i class="fa fa-arrow-right"></i>
                                                                       </div>
                                                                       <div class="text">
-                                                                           <p> Zayed International Airport</p>
+                                                                           <p> Stansted Airport Transfers</p>
                                                                       </div>
                                                                  </li>
                                                                  <li>
@@ -296,7 +295,7 @@
                                                                            <i class="fa fa-arrow-right"></i>
                                                                       </div>
                                                                       <div class="text">
-                                                                           <p>Sharjah International Airport</p>
+                                                                           <p>Luton Airport Transfers</p>
                                                                       </div>
                                                                  </li>
                                                                  <li>
@@ -304,7 +303,7 @@
                                                                            <i class="fa fa-arrow-right"></i>
                                                                       </div>
                                                                       <div class="text">
-                                                                           <p>Fujairah International Airport</p>
+                                                                           <p>London City Airport Transfers</p>
                                                                       </div>
                                                                  </li>
                                                             </ul>
@@ -360,7 +359,8 @@
                                              <img src="assets/primebus-images/logo.png" width="180px" alt=""
                                                   style="margin-bottom: 20px;">
                                              <p class="footer-widget__about-text">Prime Bus delivers reliable transport
-                                                  through focus, innovation, and dedication.</p>
+                                                  through
+                                                  focus, innovation, and dedication.</p>
                                         </div>
                                         <div class="site-footer__social">
                                              <a href="https://facebook.com" target="_blank"><i
@@ -370,7 +370,7 @@
                                         </div>
                                    </div>
                               </div>
-                              <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                              <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                                    <div class="footer-widget__column footer-widget__explore clearfix">
                                         <h3 class="footer-widget__title">Quick Links</h3>
                                         <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -382,7 +382,7 @@
                                         </ul>
                                    </div>
                               </div>
-                              <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                              <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                                    <div class="footer-widget__column footer-widget__newsletter clearfix">
                                         <h3 class="footer-widget__title">Hires</h3>
                                         <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -397,15 +397,18 @@
                               <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                    <div class="footer-widget__column footer-widget__contact">
                                         <h3 class="footer-widget__title">Contact</h3>
-                                        <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36,
-                                             Maryam Ahmad, Al Baraha, Dubai</p>
+                                        <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                             Kennel Lane, Hookwood Horley, <br>
+                                             England RH6 0AH
+                                        </p>
                                         <ul class="list-unstyled footer-widget__contact-list">
                                              <li>
                                                   <div class="icon">
                                                        <i class="fa fa-envelope"></i>
                                                   </div>
                                                   <div class="text">
-                                                       <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                                       <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
+                                                       </p>
                                                   </div>
                                              </li>
                                              <!-- <li>
@@ -426,8 +429,9 @@
                               <div class="col-xl-12">
                                    <div class="site-footer__bottom-inner">
                                         <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                                  href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed
-                                             by <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                                  href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> |
+                                             Designed by <a href="https://rkisystems.co.uk/" target="_blank">RKI
+                                                  Systems</a></p>
                                    </div>
                               </div>
                          </div>
@@ -457,7 +461,7 @@
                <ul class="mobile-nav__contact list-unstyled">
                     <li>
                          <i class="fa fa-envelope"></i>
-                         <a href="mailto:info@primebus.ae">info@primebus.ae</a>
+                         <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
                     </li>
                </ul><!-- /.mobile-nav__contact -->
                <div class="mobile-nav__top">
