--- a/contact.html
+++ b/contact.html
@@ -147,10 +147,10 @@
 
 
           <section class="faq-one">
-                <div class="contact-page-shape-1">
+               <div class="contact-page-shape-1">
                     <img src="assets/primebus-images/contact-back.png" alt="">
                </div>
-               
+
                <div class="container">
                     <div class="row">
                          <div class="col-xl-6 col-lg-6">
@@ -165,7 +165,9 @@
                                              </div>
                                              <div class="content">
                                                   <h4>Mail us</h4>
-                                                  <p><a style="font-size: 20px;" href="mailto:info@primebus.ae">info@primebus.ae</a></p>
+                                                  <p><a style="font-size: 20px;"
+                                                            href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
+                                                  </p>
                                              </div>
                                         </li>
                                         <li>
@@ -174,7 +176,10 @@
                                              </div>
                                              <div class="content">
                                                   <h4>Business Location</h4>
-                                                  <p>Office No. 2F-015 , Building No. 36, Maryam Ahmad, <br> Al Baraha, Dubai</p>
+                                                  <p>Unit H5 Gatwick Business Park, <br> 
+                                                       Kennel Lane, Hookwood Horley, <br>
+                                                       England RH6 0AH 
+                                                       </p>
                                              </div>
                                         </li>
                                    </ul>
@@ -186,37 +191,42 @@
                                         <h2 class="section-title__title section-title__titlee">Feel free to write</h2>
                                    </div>
                                    <div class="contact-page__form">
-                                   <form action="assets/inc/sendemail.php"
-                                        class="comment-one__form contact-form-validated" novalidate="novalidate">
-                                        <div class="row">
-                                             <div class="col-xl-12">
-                                                  <div class="comment-form__input-box">
-                                                       <input type="text" placeholder="Name" name="name">
+                                        <form action="assets/inc/sendemail.php"
+                                             class="comment-one__form contact-form-validated" novalidate="novalidate">
+                                             <div class="row">
+                                                  <div class="col-xl-12">
+                                                       <div class="comment-form__input-box">
+                                                            <input type="text" placeholder="Name" name="name">
+                                                       </div>
+                                                  </div>
+                                                  <div class="col-xl-12">
+                                                       <div class="comment-form__input-box">
+                                                            <input type="email" placeholder="Email address"
+                                                                 name="email">
+                                                       </div>
+                                                  </div>
+                                                  <div class="col-xl-12">
+                                                       <div class="comment-form__input-box">
+                                                            <input type="email" placeholder="Mobile Number"
+                                                                 name="email">
+                                                       </div>
                                                   </div>
                                              </div>
-                                             <div class="col-xl-12">
-                                                  <div class="comment-form__input-box">
-                                                       <input type="email" placeholder="Email address" name="email">
+                                             <div class="row">
+                                                  <div class="col-xl-12">
+                                                       <div class="comment-form__input-box text-message-box">
+                                                            <textarea name="message"
+                                                                 placeholder="Write a message"></textarea>
+                                                       </div>
+                                                       <div class="comment-form__btn-box" style="margin-top: 100px;">
+                                                            <button type="submit" class="thm-btn comment-form__btn"> <i
+                                                                      class="fa fa-arrow-right"></i> Send a
+                                                                 message</button>
+                                                       </div>
                                                   </div>
                                              </div>
-                                             <div class="col-xl-12">
-                                                  <div class="comment-form__input-box">
-                                                       <input type="email" placeholder="Mobile Number" name="email">
-                                                  </div>
-                                             </div>
-                                        </div>
-                                        <div class="row">
-                                             <div class="col-xl-12">
-                                                  <div class="comment-form__input-box text-message-box">
-                                                       <textarea name="message" placeholder="Write a message"></textarea>
-                                                  </div>
-                                                  <div class="comment-form__btn-box" style="margin-top: 100px;">
-                                                       <button type="submit" class="thm-btn comment-form__btn"> <i class="fa fa-arrow-right"></i> Send a message</button>
-                                                  </div>
-                                             </div>
-                                        </div>
-                                   </form>
-                              </div>
+                                        </form>
+                                   </div>
                               </div>
                          </div>
                     </div>
@@ -252,7 +262,8 @@
                                              <img src="assets/primebus-images/logo.png" width="180px" alt=""
                                                   style="margin-bottom: 20px;">
                                              <p class="footer-widget__about-text">Prime Bus delivers reliable transport
-                                                  through focus, innovation, and dedication.</p>
+                                                  through
+                                                  focus, innovation, and dedication.</p>
                                         </div>
                                         <div class="site-footer__social">
                                              <a href="https://facebook.com" target="_blank"><i
@@ -262,7 +273,7 @@
                                         </div>
                                    </div>
                               </div>
-                              <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                              <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                                    <div class="footer-widget__column footer-widget__explore clearfix">
                                         <h3 class="footer-widget__title">Quick Links</h3>
                                         <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -274,7 +285,7 @@
                                         </ul>
                                    </div>
                               </div>
-                              <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                              <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                                    <div class="footer-widget__column footer-widget__newsletter clearfix">
                                         <h3 class="footer-widget__title">Hires</h3>
                                         <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -289,15 +300,18 @@
                               <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                    <div class="footer-widget__column footer-widget__contact">
                                         <h3 class="footer-widget__title">Contact</h3>
-                                        <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36,
-                                             Maryam Ahmad, Al Baraha, Dubai</p>
+                                        <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                             Kennel Lane, Hookwood Horley, <br>
+                                             England RH6 0AH
+                                        </p>
                                         <ul class="list-unstyled footer-widget__contact-list">
                                              <li>
                                                   <div class="icon">
                                                        <i class="fa fa-envelope"></i>
                                                   </div>
                                                   <div class="text">
-                                                       <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                                       <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
+                                                       </p>
                                                   </div>
                                              </li>
                                              <!-- <li>
@@ -318,8 +332,9 @@
                               <div class="col-xl-12">
                                    <div class="site-footer__bottom-inner">
                                         <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                                  href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed
-                                             by <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                                  href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> |
+                                             Designed by <a href="https://rkisystems.co.uk/" target="_blank">RKI
+                                                  Systems</a></p>
                                    </div>
                               </div>
                          </div>
@@ -328,42 +343,41 @@
           </footer>
           <!--Site Footer End-->
 
-
      </div><!-- /.page-wrapper -->
 
 
      <div class="mobile-nav__wrapper">
-        <div class="mobile-nav__overlay mobile-nav__toggler"></div>
-        <!-- /.mobile-nav__overlay -->
-        <div class="mobile-nav__content">
-            <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
+          <div class="mobile-nav__overlay mobile-nav__toggler"></div>
+          <!-- /.mobile-nav__overlay -->
+          <div class="mobile-nav__content">
+               <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
-            <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/primebus-images/logo.png" width="143"
-                        alt="" /></a>
-            </div>
-            <!-- /.logo-box -->
-            <div class="mobile-nav__container"></div>
-            <!-- /.mobile-nav__container -->
+               <div class="logo-box">
+                    <a href="index.html" aria-label="logo image"><img src="assets/primebus-images/logo.png" width="143"
+                              alt="" /></a>
+               </div>
+               <!-- /.logo-box -->
+               <div class="mobile-nav__container"></div>
+               <!-- /.mobile-nav__container -->
 
-            <ul class="mobile-nav__contact list-unstyled">
-                <li>
-                    <i class="fa fa-envelope"></i>
-                    <a href="mailto:info@primebus.ae">info@primebus.ae</a>
-                </li>
-            </ul><!-- /.mobile-nav__contact -->
-            <div class="mobile-nav__top">
-                <div class="mobile-nav__social">
-                    <a href="https://facebook.com" target="_blank" class="fab fa-facebook-square"></a>
-                    <a href="https://instagram.com" target="_blank" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
-            </div><!-- /.mobile-nav__top -->
+               <ul class="mobile-nav__contact list-unstyled">
+                    <li>
+                         <i class="fa fa-envelope"></i>
+                         <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
+                    </li>
+               </ul><!-- /.mobile-nav__contact -->
+               <div class="mobile-nav__top">
+                    <div class="mobile-nav__social">
+                         <a href="https://facebook.com" target="_blank" class="fab fa-facebook-square"></a>
+                         <a href="https://instagram.com" target="_blank" class="fab fa-instagram"></a>
+                    </div><!-- /.mobile-nav__social -->
+               </div><!-- /.mobile-nav__top -->
 
 
 
-        </div>
-        <!-- /.mobile-nav__content -->
-    </div>
+          </div>
+          <!-- /.mobile-nav__content -->
+     </div>
      <!-- /.mobile-nav__wrapper -->
 
      <div class="search-popup">
