--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                                     </div>
                                     <div class="content">
                                         <p>Send Email</p>
-                                        <h5><a href="mailto:info@primebus.ae">info@primebus.ae</a></h5>
+                                        <h5><a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a></h5>
                                     </div>
                                 </li>
                                 <li>
@@ -160,8 +160,8 @@
                                         <span class="icon-location"></span>
                                     </div>
                                     <div class="content">
-                                        <p>Building No. 36, Maryam Ahmad</p>
-                                        <h5>Al Baraha, Dubai</h5>
+                                        <p>Kennel Lane, Hookwood Horley</p>
+                                        <h5>England RH6 0AH</h5>
                                     </div>
                                 </li>
                             </ul>
@@ -576,7 +576,7 @@
                                 </div>
                                 <div class="process__details">
                                     <h3 class="process__title">Coach Excellence</h3>
-                                    <p class="process__text">Multi-award winning coach operator in AE.</p>
+                                    <p class="process__text">Multi-award winning coach operator in UK.</p>
                                 </div>
                             </div>
                         </div>
@@ -956,15 +956,17 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                             <div class="footer-widget__column footer-widget__contact">
                                 <h3 class="footer-widget__title">Contact</h3>
-                                <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36, Maryam
-                                    Ahmad, Al Baraha, Dubai</p>
+                                <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                    Kennel Lane, Hookwood Horley, <br>
+                                    England RH6 0AH
+                                </p>
                                 <ul class="list-unstyled footer-widget__contact-list">
                                     <li>
                                         <div class="icon">
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                            <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a></p>
                                         </div>
                                     </li>
                                     <!-- <li>
@@ -985,8 +987,8 @@
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
                                 <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                        href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed by <a
-                                        href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                        href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> | Designed by
+                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
                             </div>
                         </div>
                     </div>
@@ -1016,7 +1018,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:info@primebus.ae">info@primebus.ae</a>
+                    <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
