--- a/service.html
+++ b/service.html
@@ -159,7 +159,7 @@
                                         <h3 class="services-one__title"><a href="airport-transfer.html">Airport
                                                   Transfer</a></h3>
                                         <p class="services-one__text">Prime Bus is a leading transport service provider
-                                             based in Dubai, with a strong </p>
+                                             based in UK, with a strong </p>
                                         <div class="services-one__read-more">
                                              <a href="airport-transfer.html">Read More <i
                                                        class="fa fa-arrow-right"></i></a>
@@ -236,7 +236,8 @@
                               <h3 class="cta-one__title">Looking for trusted travel solutions?</h3>
                          </div>
                          <div class="cta-one__btn-box">
-                              <a href="contact.html" class="thm-btn cta-one__btn"> <i class="fa fa-arrow-right"></i> get free quote</a>
+                              <a href="contact.html" class="thm-btn cta-one__btn"> <i class="fa fa-arrow-right"></i> get
+                                   free quote</a>
                          </div>
                     </div>
                </div>
@@ -260,7 +261,8 @@
                                              <img src="assets/primebus-images/logo.png" width="180px" alt=""
                                                   style="margin-bottom: 20px;">
                                              <p class="footer-widget__about-text">Prime Bus delivers reliable transport
-                                                  through focus, innovation, and dedication.</p>
+                                                  through
+                                                  focus, innovation, and dedication.</p>
                                         </div>
                                         <div class="site-footer__social">
                                              <a href="https://facebook.com" target="_blank"><i
@@ -270,7 +272,7 @@
                                         </div>
                                    </div>
                               </div>
-                              <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                              <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                                    <div class="footer-widget__column footer-widget__explore clearfix">
                                         <h3 class="footer-widget__title">Quick Links</h3>
                                         <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -282,7 +284,7 @@
                                         </ul>
                                    </div>
                               </div>
-                              <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                              <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                                    <div class="footer-widget__column footer-widget__newsletter clearfix">
                                         <h3 class="footer-widget__title">Hires</h3>
                                         <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -297,15 +299,18 @@
                               <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                    <div class="footer-widget__column footer-widget__contact">
                                         <h3 class="footer-widget__title">Contact</h3>
-                                        <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36,
-                                             Maryam Ahmad, Al Baraha, Dubai</p>
+                                        <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                             Kennel Lane, Hookwood Horley, <br>
+                                             England RH6 0AH
+                                        </p>
                                         <ul class="list-unstyled footer-widget__contact-list">
                                              <li>
                                                   <div class="icon">
                                                        <i class="fa fa-envelope"></i>
                                                   </div>
                                                   <div class="text">
-                                                       <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                                       <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
+                                                       </p>
                                                   </div>
                                              </li>
                                              <!-- <li>
@@ -326,8 +331,9 @@
                               <div class="col-xl-12">
                                    <div class="site-footer__bottom-inner">
                                         <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                                  href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed
-                                             by <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                                  href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> |
+                                             Designed by <a href="https://rkisystems.co.uk/" target="_blank">RKI
+                                                  Systems</a></p>
                                    </div>
                               </div>
                          </div>
@@ -341,37 +347,37 @@
 
 
      <div class="mobile-nav__wrapper">
-        <div class="mobile-nav__overlay mobile-nav__toggler"></div>
-        <!-- /.mobile-nav__overlay -->
-        <div class="mobile-nav__content">
-            <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
+          <div class="mobile-nav__overlay mobile-nav__toggler"></div>
+          <!-- /.mobile-nav__overlay -->
+          <div class="mobile-nav__content">
+               <span class="mobile-nav__close mobile-nav__toggler"><i class="fa fa-times"></i></span>
 
-            <div class="logo-box">
-                <a href="index.html" aria-label="logo image"><img src="assets/primebus-images/logo.png" width="143"
-                        alt="" /></a>
-            </div>
-            <!-- /.logo-box -->
-            <div class="mobile-nav__container"></div>
-            <!-- /.mobile-nav__container -->
+               <div class="logo-box">
+                    <a href="index.html" aria-label="logo image"><img src="assets/primebus-images/logo.png" width="143"
+                              alt="" /></a>
+               </div>
+               <!-- /.logo-box -->
+               <div class="mobile-nav__container"></div>
+               <!-- /.mobile-nav__container -->
 
-            <ul class="mobile-nav__contact list-unstyled">
-                <li>
-                    <i class="fa fa-envelope"></i>
-                    <a href="mailto:info@primebus.ae">info@primebus.ae</a>
-                </li>
-            </ul><!-- /.mobile-nav__contact -->
-            <div class="mobile-nav__top">
-                <div class="mobile-nav__social">
-                    <a href="https://facebook.com" target="_blank" class="fab fa-facebook-square"></a>
-                    <a href="https://instagram.com" target="_blank" class="fab fa-instagram"></a>
-                </div><!-- /.mobile-nav__social -->
-            </div><!-- /.mobile-nav__top -->
+               <ul class="mobile-nav__contact list-unstyled">
+                    <li>
+                         <i class="fa fa-envelope"></i>
+                         <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
+                    </li>
+               </ul><!-- /.mobile-nav__contact -->
+               <div class="mobile-nav__top">
+                    <div class="mobile-nav__social">
+                         <a href="https://facebook.com" target="_blank" class="fab fa-facebook-square"></a>
+                         <a href="https://instagram.com" target="_blank" class="fab fa-instagram"></a>
+                    </div><!-- /.mobile-nav__social -->
+               </div><!-- /.mobile-nav__top -->
 
 
 
-        </div>
-        <!-- /.mobile-nav__content -->
-    </div>
+          </div>
+          <!-- /.mobile-nav__content -->
+     </div>
      <!-- /.mobile-nav__wrapper -->
 
      <div class="search-popup">
