--- a/about.html
+++ b/about.html
@@ -202,7 +202,8 @@
                                     <p class="section-sub-title">Why Prime Bus</p>
                                 </div>
                                 <h2 class="section-title__title">Built on three core company values</h2>
-                                <p class="why-contet">Built on trust, innovation, and excellence, we deliver solutions that inspire growth, reliability, and long-term success.</p>
+                                <p class="why-contet">Built on trust, innovation, and excellence, we deliver solutions
+                                    that inspire growth, reliability, and long-term success.</p>
                             </div>
                         </div>
                     </div>
@@ -518,7 +519,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                        <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                             <div class="footer-widget__column footer-widget__explore clearfix">
                                 <h3 class="footer-widget__title">Quick Links</h3>
                                 <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -530,7 +531,7 @@
                                 </ul>
                             </div>
                         </div>
-                        <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                        <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                             <div class="footer-widget__column footer-widget__newsletter clearfix">
                                 <h3 class="footer-widget__title">Hires</h3>
                                 <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -545,15 +546,17 @@
                         <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                             <div class="footer-widget__column footer-widget__contact">
                                 <h3 class="footer-widget__title">Contact</h3>
-                                <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36, Maryam
-                                    Ahmad, Al Baraha, Dubai</p>
+                                <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                    Kennel Lane, Hookwood Horley, <br>
+                                    England RH6 0AH
+                                </p>
                                 <ul class="list-unstyled footer-widget__contact-list">
                                     <li>
                                         <div class="icon">
                                             <i class="fa fa-envelope"></i>
                                         </div>
                                         <div class="text">
-                                            <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                            <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a></p>
                                         </div>
                                     </li>
                                     <!-- <li>
@@ -574,8 +577,8 @@
                         <div class="col-xl-12">
                             <div class="site-footer__bottom-inner">
                                 <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                        href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed by <a
-                                        href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                        href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> | Designed by
+                                    <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
                             </div>
                         </div>
                     </div>
@@ -605,7 +608,7 @@
             <ul class="mobile-nav__contact list-unstyled">
                 <li>
                     <i class="fa fa-envelope"></i>
-                    <a href="mailto:info@primebus.ae">info@primebus.ae</a>
+                    <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
                 </li>
             </ul><!-- /.mobile-nav__contact -->
             <div class="mobile-nav__top">
