--- a/chauffeur-hire.html
+++ b/chauffeur-hire.html
@@ -4,8 +4,8 @@
 <head>
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <title>Chauffeur Hire | Best Chauffeur Hire Service in Dubai</title>
-     <meta name="description" content="Prime bus AE" />
+     <title>Chauffeur Hire | Best Chauffeur Hire Service in UK</title>
+     <meta name="description" content="Prime bus UK" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
      <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
@@ -171,7 +171,7 @@
                                         </h2>
                                         <div class="service-details__need-help-contact">
                                              <p>Mail Anytime</p>
-                                             <a href="mailto:info@primebus.ae"> info@primebus.ae</a>
+                                             <a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
                                         </div>
                                    </div>
                                    <div class="service-details__download">
@@ -348,7 +348,8 @@
                                              <img src="assets/primebus-images/logo.png" width="180px" alt=""
                                                   style="margin-bottom: 20px;">
                                              <p class="footer-widget__about-text">Prime Bus delivers reliable transport
-                                                  through focus, innovation, and dedication.</p>
+                                                  through
+                                                  focus, innovation, and dedication.</p>
                                         </div>
                                         <div class="site-footer__social">
                                              <a href="https://facebook.com" target="_blank"><i
@@ -358,7 +359,7 @@
                                         </div>
                                    </div>
                               </div>
-                              <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                              <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                                    <div class="footer-widget__column footer-widget__explore clearfix">
                                         <h3 class="footer-widget__title">Quick Links</h3>
                                         <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -370,7 +371,7 @@
                                         </ul>
                                    </div>
                               </div>
-                              <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                              <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                                    <div class="footer-widget__column footer-widget__newsletter clearfix">
                                         <h3 class="footer-widget__title">Hires</h3>
                                         <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -385,15 +386,18 @@
                               <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                    <div class="footer-widget__column footer-widget__contact">
                                         <h3 class="footer-widget__title">Contact</h3>
-                                        <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36,
-                                             Maryam Ahmad, Al Baraha, Dubai</p>
+                                        <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                             Kennel Lane, Hookwood Horley, <br>
+                                             England RH6 0AH
+                                        </p>
                                         <ul class="list-unstyled footer-widget__contact-list">
                                              <li>
                                                   <div class="icon">
                                                        <i class="fa fa-envelope"></i>
                                                   </div>
                                                   <div class="text">
-                                                       <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                                       <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
+                                                       </p>
                                                   </div>
                                              </li>
                                              <!-- <li>
@@ -414,8 +418,9 @@
                               <div class="col-xl-12">
                                    <div class="site-footer__bottom-inner">
                                         <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                                  href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed
-                                             by <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                                  href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> |
+                                             Designed by <a href="https://rkisystems.co.uk/" target="_blank">RKI
+                                                  Systems</a></p>
                                    </div>
                               </div>
                          </div>
@@ -445,7 +450,7 @@
                <ul class="mobile-nav__contact list-unstyled">
                     <li>
                          <i class="fa fa-envelope"></i>
-                         <a href="mailto:info@primebus.ae">info@primebus.ae</a>
+                         <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
                     </li>
                </ul><!-- /.mobile-nav__contact -->
                <div class="mobile-nav__top">
