--- a/luxury-coach.html
+++ b/luxury-coach.html
@@ -4,8 +4,8 @@
 <head>
      <meta charset="UTF-8" />
      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-     <title>Luxury Coach Hire | Best Luxury Coach Hire Service in Dubai</title>
-     <meta name="description" content="Prime bus AE" />
+     <title>Luxury Coach Hire | Best Luxury Coach Hire Service in UK</title>
+     <meta name="description" content="Prime bus UK" />
      <!-- favicons Icons -->
      <link rel="icon" type="image/png" sizes="32x32" href="assets/primebus-images/fav.png" />
      <link rel="manifest" href="assets/images/favicons/site.webmanifest" />
@@ -174,7 +174,7 @@
                                         </h2>
                                         <div class="service-details__need-help-contact">
                                              <p>Mail Anytime</p>
-                                             <a href="mailto:info@primebus.ae"> info@primebus.ae</a>
+                                             <a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
                                         </div>
                                    </div>
                                    <div class="service-details__download">
@@ -228,7 +228,7 @@
                                                                  alt=""></span>
                                                   </div>
                                                   <div class="service-details__points-content">
-                                                       <p>Affordable Mini Bus Hire <br> in Dubai</p>
+                                                       <p>Affordable Mini Bus Hire <br> in UK</p>
                                                   </div>
                                              </li>
                                         </ul>
@@ -246,9 +246,9 @@
                                                             </h3>
                                                             <p class="service-details__benefits-text text-just">Prime
                                                                  Bus is the
-                                                                 UAE’s premier private coach hire service, offering
+                                                                 UK's premier private coach hire service, offering
                                                                  luxury coaches, expert planning, and seamless travel
-                                                                 experiences across Dubai and the Emirates with
+                                                                 experiences across UK and the Emirates with
                                                                  unmatched comfort, reliability, and professionalism.
                                                             </p>
                                                        </div>
@@ -265,7 +265,7 @@
                                                             <p class="service-details__benefits-text text-just">Our
                                                                  luxury
                                                                  Mercedes-Benz minibuses are among the newest in the
-                                                                 UAE, ideal for business travel or weddings. Maintained
+                                                                 UK, ideal for business travel or weddings. Maintained
                                                                  to exceptional standards, they ensure comfort,
                                                                  reliability, and a premium travel experience.</p>
                                                        </div>
@@ -320,7 +320,8 @@
                                              <img src="assets/primebus-images/logo.png" width="180px" alt=""
                                                   style="margin-bottom: 20px;">
                                              <p class="footer-widget__about-text">Prime Bus delivers reliable transport
-                                                  through focus, innovation, and dedication.</p>
+                                                  through
+                                                  focus, innovation, and dedication.</p>
                                         </div>
                                         <div class="site-footer__social">
                                              <a href="https://facebook.com" target="_blank"><i
@@ -330,7 +331,7 @@
                                         </div>
                                    </div>
                               </div>
-                              <div class="col-xl-2 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="200ms">
+                              <div class="col-xl-2 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="200ms">
                                    <div class="footer-widget__column footer-widget__explore clearfix">
                                         <h3 class="footer-widget__title">Quick Links</h3>
                                         <ul class="footer-widget__explore-list list-unstyled clearfix">
@@ -342,7 +343,7 @@
                                         </ul>
                                    </div>
                               </div>
-                              <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="300ms">
+                              <div class="col-xl-3 col-lg-6 col-md-6  wow fadeInUp" data-wow-delay="300ms">
                                    <div class="footer-widget__column footer-widget__newsletter clearfix">
                                         <h3 class="footer-widget__title">Hires</h3>
                                         <!-- <p class="footer-widget__newsletter-text">Subscribe to our newsletter and get update in your inbox.</p> -->
@@ -357,15 +358,18 @@
                               <div class="col-xl-3 col-lg-6 col-md-6 wow fadeInUp" data-wow-delay="400ms">
                                    <div class="footer-widget__column footer-widget__contact">
                                         <h3 class="footer-widget__title">Contact</h3>
-                                        <p class="footer-widget__contact-text"> Office No. 2F-015 , Building No. 36,
-                                             Maryam Ahmad, Al Baraha, Dubai</p>
+                                        <p class="footer-widget__contact-text"> Unit H5 Gatwick Business Park, <br>
+                                             Kennel Lane, Hookwood Horley, <br>
+                                             England RH6 0AH
+                                        </p>
                                         <ul class="list-unstyled footer-widget__contact-list">
                                              <li>
                                                   <div class="icon">
                                                        <i class="fa fa-envelope"></i>
                                                   </div>
                                                   <div class="text">
-                                                       <p><a href="mailto:info@primebus.ae"> info@primebus.ae</a></p>
+                                                       <p><a href="mailto:info@primebus.co.uk"> info@primebus.co.uk</a>
+                                                       </p>
                                                   </div>
                                              </li>
                                              <!-- <li>
@@ -386,8 +390,9 @@
                               <div class="col-xl-12">
                                    <div class="site-footer__bottom-inner">
                                         <p class="site-footer__bottom-text">© All Copyright 2025 by <a
-                                                  href="https://primebus.ae" target="_blank">Primebus.ae</a> | Designed
-                                             by <a href="https://rkisystems.co.uk/" target="_blank">RKI Systems</a></p>
+                                                  href="https://primebus.co.uk" target="_blank">Primebus.co.uk</a> |
+                                             Designed by <a href="https://rkisystems.co.uk/" target="_blank">RKI
+                                                  Systems</a></p>
                                    </div>
                               </div>
                          </div>
@@ -417,7 +422,7 @@
                <ul class="mobile-nav__contact list-unstyled">
                     <li>
                          <i class="fa fa-envelope"></i>
-                         <a href="mailto:info@primebus.ae">info@primebus.ae</a>
+                         <a href="mailto:info@primebus.co.uk">info@primebus.co.uk</a>
                     </li>
                </ul><!-- /.mobile-nav__contact -->
                <div class="mobile-nav__top">
